# demoland-engine

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.pipe  README.md  build_wasm.sh  docker_usage.ipynb  entrypoint.sh  env.yaml  function_app.py  function_app2.py  pyproject.toml  requirements.txt
.github/workflows/: build_wasm.yaml  build_wasm_wheel.yaml  deploy_azure_functions.yaml  run_tests.yaml
api/: main.py
data/global/: air_quality_model.joblib  house_price_model.joblib
data/isle_of_wight/: accessibility.joblib  default_data.parquet  empty.parquet  matrix.parquet  oa_area.parquet  oa_key.parquet
data/tyne_and_wear/: air_quality_model.joblib  house_price_model.joblib  matrix.parquet
data/tyne_and_wear_hex/: default_data.parquet  empty.parquet  matrix.parquet  oa_area.parquet  oa_key.parquet
demoland_engine/: __init__.py  api.py  baselines.py  cache.py  data.py  engine.py  graph.py  indicators.py  predictors.py  sampling.py
demoland_engine/tests/: test_baselines.py  test_predictors.py  test_sampling.py
docs/: engine.ipynb  scenario_modelling.ipynb
pipeline/: Dockerfile  ReadMe.md  index.ts  pipeline.py
