[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "demoland_engine"
dynamic = ["version"]
authors = [
    { name = "Martin Fleischmann", email = "martin@martinfleischmann.net" },
]
license = { text = "MIT" }
description = "A predictive engine for the Alan Turing Institute project DemoLand"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "joblib==1.2.0",
    "pandas==1.5.3",
    "libpysal==4.7.0",
    "xarray==2023.1.0",
    "pyarrow==11.0.0",
    "scikit-learn==1.2.0",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn"]

[project.urls]
Home = "https://github.com/martinfleis/demoland_engine"
Repository = "https://github.com/martinfleis/demoland_engine"

[tool.setuptools.packages.find]
include = ["demoland_engine", "demoland_engine.*"]

[tool.setuptools.package-data]
demoland_engine = ["*.joblib", "*.pickle", "*.parquet", "*.csv"]
