[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "demoland_engine"
dynamic = ["version"]
authors = [
    { name = "Martin Fleischmann", email = "martin@martinfleischmann.net" },
]
license = { text = "MIT" }
description = "A predictive engine for the Alan Turing Institute project DemoLand"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "joblib==1.3.2",
    "pandas==1.5.3",
    "xarray==2023.1.0",
    "fastparquet==2023.7.0",
    "scikit-learn==1.3.1",
    "pooch",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn"]
test = ["pytest"]

[project.urls]
Home = "https://github.com/Urban-Analytics-Technology-Platform/demoland-engine"
Repository = "https://github.com/Urban-Analytics-Technology-Platform/demoland-engine"

[tool.setuptools.packages.find]
include = ["demoland_engine", "demoland_engine.*"]

[tool.setuptools.package-data]
demoland_engine = ["*.joblib", "*.pickle", "*.parquet", "*.csv"]
